--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: rgba(190, 192, 190, 0.911);
   margin: 0;
   padding: 0;
 }
@@ -21,23 +21,31 @@ h6 {
 }
 
 img {
-  width: 100%;
+  width: 50%;
+  border-radius: 8px;
 }
 
-.main-nav ul {
+.skip-links, a{
+  list-style: none;
+  text-decoration: none;
+
+}
+
+
+#main-nav ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
+  margin: 10;
   padding: 0;
 }
 
-.main-nav ul li {
+#main-nav ul li {
   flex: 1;
   text-align: center;
 }
 
-.main-nav ul li a {
+#main-nav ul li a {
   display: block;
   color: inherit;
   text-decoration: none;
