--- a/css/main.css
+++ b/css/main.css
@@ -23,15 +23,22 @@ h6 {
 img {
   width: 50%;
   border-radius: 8px;
+  float: left;
+  padding: 0px 20px 0 0 ;
+
+}
+p {
+  line-height: 25px;
 }
 
-.skip-links, a{
+.skip-links ,a{
   list-style: none;
   text-decoration: none;
-
 }
 
-
+.owner {
+  float: none;
+}
 #main-nav ul {
   list-style: none;
   display: flex;
