--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: rgba(190, 192, 190, 0.911);
+  background-color: rgba(207, 250, 250, 0.767);
   margin: 0;
   padding: 0;
 }
@@ -12,6 +12,7 @@ h4,
 h5,
 h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
+  
 }
 
 .container {
@@ -34,22 +35,30 @@ p {
 .skip-links ,a{
   list-style: none;
   text-decoration: none;
+
 }
 
 .owner {
   float: none;
 }
+
+#main-nav{
+  background-color: rgb(9, 141, 105);
+  height: 50px;
+  margin: 10px 10px 10px 0;
+  width: 100%;
+}
 #main-nav ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  margin: 10;
   padding: 0;
 }
 
 #main-nav ul li {
   flex: 1;
   text-align: center;
+  margin: 10px 10px 0 10px;
 }
 
 #main-nav ul li a {
@@ -57,6 +66,22 @@ p {
   color: inherit;
   text-decoration: none;
   font-size: 1.25rem;
+  color: white;
+}
+
+
+#main-nav a:hover{
+  background: white;
+  color: rgb(9, 141, 105);
+  width: 100%;
+  transition: .5s;
+  
+ 
+  
+
+}
+ #w-h1 {
+  text-decoration: underline;
 }
 
 form input,
