--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ p {
 .skip-links ,a{
   list-style: none;
   text-decoration: none;
+  transition: all 0.5s;
 
 }
 
@@ -76,9 +77,6 @@ p {
   width: 100%;
   transition: .5s;
   
- 
-  
-
 }
  #w-h1 {
   text-decoration: underline;
@@ -87,9 +85,11 @@ p {
 form input,
 form textarea {
   display: block;
+  border-color:  rgb(9, 141, 105);
   width: 100%;
   margin-bottom: 1rem;
   padding: .5rem 1rem;
+  border-radius: 5px;
 }
 
 form textarea {
@@ -105,7 +105,9 @@ form button {
   padding: 1rem;
   text-transform: uppercase;
 }
-
+form button:hover{
+  background-color: aquamarine;
+}
 .site-footer {
   padding: 2rem 0;
 }
