--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,8 @@ form button {
   text-transform: uppercase;
 }
 form button:hover{
-  background-color: aquamarine;
+  background-color: rgb(9, 141, 105);
+  color: white;
 }
 .site-footer {
   padding: 2rem 0;
