--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,7 @@ form button {
 form button:hover{
   background-color: rgb(189, 48, 95);
   color: white;
+  cursor: pointer;
 }
 .site-footer {
   padding: 2rem 0;
